[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/karthiks/query_blogger_mcp_server"
"Bug Tracker" = "https://github.com/karthiks/query_blogger_mcp_server/issues"

[project]
name = "query_blogger_mcp_server"
version = "0.1.1"
description = "Model Context Protocol (MCP) server for read-only, domain-specific Blogger API access."
authors = [
    { name = "Karthik Sirasanagandla", email = "sirkarthik@gmail.com" }
]
license = { text = "MIT LICENSE" }
readme = "README.md"

requires-python = ">=3.10" # Min Python Version
dependencies = [
    "fastmcp>=2.3.2,<3.0.0", # Python SDK that implements MCP spec to build/create MCP servers/clients
    "httpx>=0.28.1,<0.29", # for native async-await support that `requests` lib doesn't have
    "uvicorn[standard]==0.34.3", # ASGI server to run web-app
    "fastapi==0.115.13", # web framework for building APIs
    "pydantic-settings>=2.10,<2.11", # For managing application settings
    # If you were using the knowledge base, keep these:
    # "sentence-transformers>=2.7.0,<2.8.0",
    # "numpy>=1.26.4,<1.27.0",
    "html2text>=2025.4.15", # For HTML to Markdown conversion
]


[project.optional-dependencies]
# Development dependencies (for pip-compile -P dev requirements-dev.in)
dev = [
    "python-dotenv>=1.0.1",
    "flake8>=7.1.1",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.394",
    "ollama>=0.5.1", # For demo code
    "beautifulsoup4>=4.13.4", # For demo code
    "langchain>=0.3.26", # For demo code
    "transformers>=4.53.1", # For HuggingFace pipelines
    # "diffusers>=0.34.0", # For generating images
]

[tool.pip-tools]
generate-hashes = false # Recommended for production deployments for security
cross-platform = false # True if you need a single requirements.txt for multiple OS/architectures

[tool.setuptools.packages.find]
where = ["src"] # This tells setuptools to look for packages under the 'src' directory
include = ["query_blogger_mcp_server*"] # This tells setuptools to find packages starting with query_blogger_mcp_server

[tool.setuptools.package-data]
"query_blogger_mcp_server" = ["**/*.txt", "**/*.md"] # Example: if you had data files
